<resources>
    <string name="app_name">Instant Help</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="map">Map</string>
    <string name="userName">Username</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register_as_volunteer">Register as Volunteer</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="blood_donor">Blood donor</string>
    <string name="first_aider">First aider</string>
    <string name="register">Create Account</string>
    <string name="have_account">Already have Account !</string>
    <string name="signOut">Signout</string>
    <string name="first_aid_required">First Aid required</string>
    <string name="map_help">Map Help</string>
    <string name="blood_required">Blood required</string>
    <string name="signup">Signup</string>
    <string name="open_drawer">open navigation drawer</string>
    <string name="close_drawer">close navigation drawer</string>
    <string name="feedback_sentence">Tell us what changes you\'d like to see, or bugs you\'ve discovered.</string>
    <string name="description">Description</string>
    <string name="send">Send</string>


    <string-array name="bloodgroups">
        <item>O+ve</item>
        <item>O-ve</item>
        <item>A+ve</item>
        <item>A-ve</item>
        <item>B+ve</item>
        <item>B-ve</item>
        <item>AB+ve</item>
        <item>AB-ve</item>
    </string-array>

    <string-array name="country">
        <item>Bangladesh</item>
        <item>Nepal</item>
        <item>Pakistan</item>
        <item>Iran</item>
        <item>Srilanka</item>
        <item>Afghanistan</item>
    </string-array>

    <string-array name="bangladeshCities">
        <item>Dhaka</item>
        <item>Chittagong</item>
    </string-array>

    <string-array name="nepalCities">
        <item>Kathmandu</item>
        <item>Pokhara</item>
    </string-array>

    <string-array name="pakistanCities">
        <item>Karachi</item>
        <item>Lahore</item>
        <item>Islamabad</item>
        <item>Rawalpindi</item>
        <item>Multan</item>
    </string-array>

    <string-array name="iranCities">
        <item>Tehran</item>
        <item>Mashhad</item>
    </string-array>

    <string-array name="srilankaCities">
        <item>Colombo</item>
        <item>Galkissa</item>
    </string-array>

    <string-array name="afganistanCities">
        <item>Kabul</item>
        <item>Kandhar</item>
        <item>Jalalabad</item>
    </string-array>

    <string-array name="dhakaHosp">
        <item>Apollo Hospitals Dhaka</item>
        <item>SQUARE Hospitals Ltd</item>
        <item>Abir General Hospital</item>
    </string-array>

    <string-array name="chittagongHosp">
        <item>Al-Zahar Hospital Ltd.</item>
        <item>Centre Point Hospital (Pvt)Ltd.</item>
        <item>Chittagong Diabetic Hospital</item>
    </string-array>

    <string-array name="khatmanduHosp">
        <item>Samaj Dental Hospital</item>
        <item>Dr. Narayan Bahadur Basnet</item>
        <item>IVF Surrogacy Nepal</item>
    </string-array>

    <string-array name="potharaHosp">
        <item>Green Pastures Hospital</item>
        <item>Pokhara Hospital And Research Centre Pvt. Ltd.</item>
        <item>Fishtail Hospital and Research Center</item>
    </string-array>

    <string-array name="karachiHosp">
        <item>Civil Hospital</item>
        <item>Kulsum Bai Valika Social Security Hospital</item>
        <item>Nazimabad Chest Clinic</item>
        <item>Dow University of Health Sciences Ojha Campus</item>
        <item>Sindh Government Qatar Hospital</item>
        <item>Sindh Institute of Skin Diseases</item>
        <item>Bantva Hospital</item>
        <item>Abbasi Shaheed Hospital (ASH)</item>
        <item>Nasir Hussein Shaheed Hospital</item>
        <item>Lyari General Hospital</item>
        <item>Kutiyana Memon Hospital</item>
    </string-array>

    <string-array name="lahoreHosp">
        <item>Al-Khidmat Hospital, Multan Road</item>
        <item>Lady Aitchison Hospital</item>
        <item>Mayo Hospital</item>
        <item>Punjab Institute of Cardiology</item>
        <item>Lady Willingdon Hospital</item>
        <item>Shaikh Zayed Hospital</item>
    </string-array>

    <string-array name="islamabadHosp">
        <item>Al-Fatima Clinic</item>
        <item>CDA Dispensary</item>
        <item>D.H.Q Hospital</item>
    </string-array>

    <string-array name="pindiHosp">
        <item>Al-Sadiq Hospital</item>
        <item>AMC Hospital</item>
        <item>Armed Forces Institute of Transfusion (AFIT)</item>
    </string-array>

    <string-array name="multanHosp">
        <item>Amna Blood Bank</item>
        <item>Combined Military Hospital Multan</item>
        <item>Dr Riaz Shehbaz Clinic</item>
    </string-array>

    <string-array name="tehranHosp">
        <item>Day General Hospital</item>
        <item>Kasra General Hospital</item>
        <item>Iamat Center</item>
    </string-array>

    <string-array name="mashadHosp">
        <item>Imam Hospitals</item>
        <item>MEHAR Hospitals</item>
        <item>Razavi Hospitals</item>
    </string-array>

    <string-array name="colomboHosp">
        <item>Colombo South Teaching Hospital, Kalubowila</item>
        <item>Castle Street Hospital for Women, Colombo</item>
        <item>Mulleriyawa Base Hospital (Colombo East General Hospital), Mulleriyawa</item>
    </string-array>

    <string-array name="galkissaHosp">
        <item>Mt. Lavinia Branch</item>
    </string-array>

    <string-array name="kabulHosp">
        <item>DK-German Medical Diagnostic Center</item>
        <item>Matab Healthcare Hospital</item>
    </string-array>

    <string-array name="kandharHosp">
        <item>Sovereign Healthcare Clinic</item>
    </string-array>

    <string-array name="jalabadHosp">
        <item>Parchinar Main Hospital</item>
        <item>Sayad Afzal Hussain Hospital</item>
    </string-array>


    <string-array name="drawer_menu">
        <item>First Aid Guide</item>
        <item>Register as volunteer</item>
        <item>Add location</item>
        <item>Feedback</item>
        <item>Settings</item>
        <item>Signout</item>
    </string-array>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="type_text_message">Type text Message</string>
    <string name="username">Username</string>
    <string name="no_account_yet_create_one">No account yet? Create one</string>
    <string name="unknown_geofence_transition">Unknown Geofence Transition</string>
    <string name="geofence_transition_dwell">Geofence Transition Dwell</string>
    <string name="home">Home</string>
    <string name="first_aid_guide">First Aid Guide</string>
    <string name="feedback">Feedback</string>
    <string name="tools">Tools</string>
    <string name="improve_your_location">Improve your location</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="fall_detection">Fall Detection</string>
    <string name="sms_help">requests for FirstAid. (SMS sent via Instant Help)</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


</resources>
