<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    android:layout_height="match_parent"
    tools:context="com.example.hammad.instanthelp.Fragments.SignupFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/coord_linear_layout">
    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/coord_layout"/>
    </LinearLayout>
<LinearLayout
    android:layout_centerHorizontal="true"
    android:paddingLeft="32dp"
    android:paddingRight="32dp"
    android:layout_below="@id/coord_linear_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">
    <EditText
        android:id="@+id/email_editText"
        android:hint="@string/userName"
        android:selectAllOnFocus="true"
        android:textColor="#006064"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">
    <EditText
        android:id="@+id/password_editText"
        android:textColor="#006064"
        android:hint="@string/password"
        android:selectAllOnFocus="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">
    <EditText
        android:id="@+id/confirmPassword_editText"
        android:selectAllOnFocus="true"
        android:hint="@string/confirm_password"
        android:textColor="#006064"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <TextView
        android:text="@string/register_as_volunteer"
        android:textSize="14sp"
        android:textColor="#006064"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
        <RadioGroup
            android:orientation="horizontal"
            android:textColor="#006064"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/yes_radiobtn"
            android:textColor="#006064"
            android:text="@string/yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:checked="true"
            android:id="@+id/no_radiobtn"
            android:textColor="#006064"
            android:text="@string/no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        </RadioGroup>
    </LinearLayout>

    <CheckBox
        android:visibility="gone"
        android:textColor="#006064"
        android:id="@+id/bloodDonor_chkbox"
        android:text="@string/blood_donor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Spinner
        android:visibility="gone"
        android:textColor="#006064"
        android:id="@+id/bloodgroup_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <CheckBox
        android:textColor="#006064"
        android:visibility="gone"
        android:id="@+id/firstAider_chkbox"
        android:text="@string/first_aider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/signup_button"
        android:background="@color/colorPrimaryDark"
        android:textColor="#FFFFFF"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        android:text="@string/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/signIn"
        android:text="@string/have_account"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:textColor="#FFFFFF"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>
    </RelativeLayout>
</ScrollView>